Fix my work spacing

--- a/styles.css
+++ b/styles.css
@@ -258,7 +258,7 @@ h2 {
 }
 
 .work-spacing {
-    width: 80%;
+    width: 90%;
     max-width: 1800px;
     margin-right: -48px;
     animation: fadein 5s 1;
